Remove need for program arguments. Add notice of bStats in readme.